# gmail_auto

./: README.md  docker-compose.yml
.cursor/: index.mdc
.cursor/rules/: ai-development.mdc  backend-development.mdc  frontend-development.mdc
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: database.py
backend/app/services/: chat_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/chat/[session_id]/: page.tsx
frontend/src/context/: ChatSessionContext.tsx
frontend/src/example/: chat.route.ts
