[project]
name = "backend"
version = "0.1.0"
description = "A FastAPI backend for chatbot with uv and LangGraph"
authors = [
    {name = "Your Startup", email = "contact@yourstartup.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-core",
    "openai",
    "httpx",
    "langchain-openai",
    "python-dotenv",
    "supabase",
    "sqlalchemy",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "fastapi",
    "uvicorn",
]

[tool.uv]
dev-dependencies = [
    "fastapi",
    "uvicorn",
]
